# control_grasp

./: .gitignore  CMakeLists.txt  NOTICE  README.md  package.xml  test.yaml
include/: grasp.h  so101_gripper.h
src/: grasp.c  grasp_core.h
src/drivers/: drv_dummy.c  drv_uart_so101_gripper.c
test/: HW_TEST_GUIDE.md  benchmark_dummy_grasp.c  test_dummy_functional.sh  test_dummy_performance.sh  test_grasp.c  test_hw_so101_gripper.c  test_hw_so101_gripper_smoke.sh
